--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     
  </main>   
  <footer>
-    <h2>BrightBlogSite</h2>
+    <h2>Facts By Favour</h2>
     <section>
         <nav>
             <ul id="footerul">
