--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     rel="stylesheet">
    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BrightBlog</title>
+    <title>Facts By Favour</title>
 </head>
 <body>
    
