--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     rel="stylesheet">
    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BrightBlog</title>
+    <title>Facts By Favour</title>
 </head>
 <body>
    
@@ -168,7 +168,8 @@
 
               <h3>Last updated 23/08/2024</h3>
               
-
+              <h4> My Socials</h4>
+   
               <a href=https://www.linkedin.com/in/favour-izevbuwova-a53964218?lipi >
              Author's LinkedIn </a>
             
